# cosmic-ext-applet-emoji-selector

./: .gitignore  ATTRIBUTION.md  CONFIG.md  Cargo.toml  DEPENDENCIES.md  LICENSE-MIT  README.md  gen-i18n.js  i18n-gen.js  justfile
data/: dev.dominiccgeh.CosmicAppletEmojiSelector.desktop
data/schema/: font_family
i18n-json/af/: annotations.json  annotations.json.xz
i18n-json/am/: annotations.json  annotations.json.xz
i18n-json/ar/: annotations.json  annotations.json.xz
i18n-json/ar-SA/: annotations.json  annotations.json.xz
i18n-json/as/: annotations.json  annotations.json.xz
i18n-json/az/: annotations.json  annotations.json.xz
i18n-json/be/: annotations.json  annotations.json.xz
i18n-json/bg/: annotations.json  annotations.json.xz
i18n-json/bn/: annotations.json  annotations.json.xz
i18n-json/bs/: annotations.json  annotations.json.xz
i18n-json/ca/: annotations.json  annotations.json.xz
i18n-json/chr/: annotations.json  annotations.json.xz
i18n-json/cs/: annotations.json  annotations.json.xz
i18n-json/cy/: annotations.json  annotations.json.xz
i18n-json/da/: annotations.json  annotations.json.xz
i18n-json/de/: annotations.json  annotations.json.xz
i18n-json/de-CH/: annotations.json  annotations.json.xz
i18n-json/dsb/: annotations.json  annotations.json.xz
i18n-json/el/: annotations.json  annotations.json.xz
i18n-json/en/: annotations.json  annotations.json.xz
i18n-json/en-001/: annotations.json  annotations.json.xz
i18n-json/en-AU/: annotations.json  annotations.json.xz
i18n-json/en-CA/: annotations.json  annotations.json.xz
i18n-json/en-GB/: annotations.json  annotations.json.xz
i18n-json/en-IN/: annotations.json  annotations.json.xz
i18n-json/es/: annotations.json  annotations.json.xz
i18n-json/es-419/: annotations.json  annotations.json.xz
i18n-json/es-MX/: annotations.json  annotations.json.xz
i18n-json/es-US/: annotations.json  annotations.json.xz
i18n-json/et/: annotations.json  annotations.json.xz
i18n-json/eu/: annotations.json  annotations.json.xz
i18n-json/fa/: annotations.json  annotations.json.xz
i18n-json/fi/: annotations.json  annotations.json.xz
i18n-json/fil/: annotations.json  annotations.json.xz
i18n-json/fr-CA/: annotations.json  annotations.json.xz
src/: config.rs  main.rs  moure_area_copy.rs  window.rs
(+311 files in other folders)
