[package]
name = "cosmic-applet-emoji-selector"
version = "0.1.1"
edition = "2021"

[dependencies]

  i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
  i18n-embed-fl = "0.8.0"
  rust-embed = "8.3.0"


  serde =  "1.0.197"
  paste = "1.0.14"


cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "libcosmic",
    "once_cell",
] }

libcosmic = { git = "https://github.com/pop-os/libcosmic", version = "0.1.0", default-features = false, features = ["applet", "tokio", "wayland"] }
once_cell = "1.19.0"
emojis = "0.6.1"
rayon = "1.10.0"
wl-clipboard-rs = { version = "0.8.1", features = ["dlopen", "native_lib"] }
