[package]
name = "cosmic-applet-emoji-selector"
version = "0.1.4"
edition = "2021"

[dependencies]

i18n-embed = { version = "0.14.1", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.8.0"
rust-embed = "8.3.0"


serde = { version = "1.0.197", features = ["derive"] }
paste = "1.0.14"


cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
  "libcosmic",
  "once_cell",
] }

libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
  "applet",
  "tokio",
  "wayland",
  "clipboard",
] }
once_cell = "1.19.0"
emojis = "0.6.1"
regex = "1.10.4"
serde_json = "1.0.122"
fluent-langneg = "0.14.1"
